# tbot_funding_arb

./: .env  .env.example  .gitignore  BTENGINE_CONTEXT.md  SPECIFICATION.md  batch_15d_btcusdt_ma9_5m_12-13.csv  batch_30d_btcusdt_ma9_5m_full_day.csv  batch_30d_part1_2025-07-01_2025-07-05.csv  batch_30d_part2_2025-07-06_2025-07-10.csv  batch_30d_part3_2025-07-11_2025-07-15.csv  batch_30d_part4_2025-07-16_2025-07-20.csv  batch_30d_part5_2025-07-21_2025-07-25.csv  batch_30d_part6_2025-07-26_2025-07-30.csv  batch_5d_strict_book_2025-07-20_2025-07-24.csv  batch_5d_strict_book_tuned_2025-07-20_2025-07-24.csv  batch_probe_1d_full_2025-07-01.csv  cryptohftdata_amostras.md  equity.csv  fills.csv  pyproject.toml  readme.md
docs/: README.md
docs/btengine/: README.md  api_reference.md  core_concepts.md  crypto_hftdata.md  execution_model.md  implementation_plan.md  quickstart.md  reuse_in_other_projects.md  scripts.md
funding/: __init__.py  basis_funding.py
scripts/: analyze_replay_temporal.py  inspect_orderbook_parquet.py  replay_orderbook.py  run_backtest_basis_funding.py  run_backtest_batch.py  run_backtest_entry_exit.py  run_backtest_ma_cross.py  run_backtest_replay.py  validate_s3_dataset.py
src/btengine/: __init__.py  broker.py  (+4 more)
tests/: conftest.py  test_analytics_round_trips.py  test_basis_funding_strategy.py  test_broker.py  test_cryptohftdata_liquidations.py  test_cryptohftdata_open_interest.py  test_cryptohftdata_orderbook.py  test_cryptohftdata_ticker.py  test_end_to_end_entry_exit.py  test_engine.py  test_orderbook.py  test_queue_model.py  test_replay.py
(+22 files in other folders)
