[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tbot-funding-arb"
version = "0.1.0"
description = "Basis & funding arbitrage strategy project (uses btengine as an external dependency)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "btengine>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["funding*"]
